@startuml

class User{
+id
+username
+password
+role

+login()
+logout()
}

class Admin{
+kelolaMahasiswa()
+cetakLaporan()
}

class Mahasiswa{
+nim
+nama
+email
+semester
+status

+lihatInformasi()
}

class ProgramStudi{
+id
+kodeProdi
+namaProdi
}

User <|-- Admin
User <|-- Mahasiswa

ProgramStudi "1" -- "*" Mahasiswa

@enduml